--- a/server.cfg
+++ b/server.cfg
@@ -100,7 +100,7 @@ sv_hostname "FXServer"
 #exec server_internal.cfg
 
 # Loading a server icon (96x96 PNG file)
-load_server_icon logo.png
+load_server_icon irymu1U.png
 
 # convars which can be used in scripts
 set temp_convar "hey world!"
